--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/core": "~13.3.0",
     "@angular/fire": "^7.6.1",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/store": "^13.2.0",
     "firebase": "^9.23.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
